--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.projectlombok:lombok:1.18.12'
 	implementation 'junit:junit:4.12'
+    implementation 'org.jetbrains:annotations:20.1.0'
 
-	//Database
+    //Database
 	runtimeOnly 'com.h2database:h2'
 
 	// Testing
